--- a/precastr/Base.lproj/Main.storyboard
+++ b/precastr/Base.lproj/Main.storyboard
@@ -646,6 +646,7 @@
                                 <rect key="frame" x="0.0" y="220" width="375" height="447"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <connections>
                                     <outlet property="dataSource" destination="wau-DT-w7Q" id="fbd-WV-Z3C"/>
                                     <outlet property="delegate" destination="wau-DT-w7Q" id="yXs-Es-VnV"/>
